Removed search bar & horizontal scrolling, centered background correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,8 @@ h1, h2, h3, h4, h5, h6, p, a{
 .fullscreen{
 	height: 105vh;
 	width: 100vw;
-	max-width:100%;
-	position: relative
-	/*padding-top: 10%;*/
+	max-width: 100%;
+	position: relative;
 }
 .cheeseburger{
 	font-size: 40px;
@@ -30,8 +29,10 @@ h1, h2, h3, h4, h5, h6, p, a{
 	background-image: url(../images/couple.jpg);
 	background-size:     cover;
 	background-repeat:   no-repeat;
-	background-position: center center;
+	/*background-position: center center;*/
+	background-position: 0% 30%;
 	color: white;
+	max-width: 100%;
 }
 #section1 a{
 	color: white;
@@ -46,20 +47,22 @@ h1, h2, h3, h4, h5, h6, p, a{
 	height: 20vw;
 	display: block;
 	margin-left: 20%;
-	position: absolute;               /* 2 */
-	top: 40%;                         /* 3 */
-	transform: translate(0, -50%);   /* 4 */
+	position: absolute;             
+	top: 40%;                       
+	transform: translate(0, -50%);  
 	background-image: url(../images/pearwhite-full.svg);
-    background-size:     contain;                      /* <------ */
+    background-size:     contain;      
     background-repeat:   no-repeat;
     background-position: center center; 
 }
 #s1-overlay2{
 	position: absolute;
 	top: 60%;
-	width: 100%;
+	width: 99vw;
+	/*max-width: 100%;*/
 	margin-left: auto;
 	margin-right: auto;
+
 }
 .unselectable{
 	user-select: none;
